--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
     link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Roboto|Josefin+Sans|Droid+Sans|Pontano+Sans|Ubuntu|Montserrat')
     link(rel='stylesheet', href='css/styles.css')
-    link(rel='stylesheet', type='text/css', href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css')
+    link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css')
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
